--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
-    <title>Hochschulwahlen 2012 - AStA Augsburg</title>
+    <title>Hochschulwahlen 2015 - AStA Augsburg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Florian Heinle">
@@ -51,7 +51,7 @@
                 <img src="img/asta.png" alt="AStA-Logo" title="Allgemeiner Studierendenausschuss Augsburg">
             </div>
             <div class="span6">
-                <h1>Hochschulwahlen 2012</h1>
+                <h1>Hochschulwahlen 2015</h1>
             </div>
             <div class="span2">
                 <a href="#impressum">Impressum</a>
@@ -61,18 +61,20 @@
             <div class="span12" id="ankreuzen">
                 <div id="ankreuzen-teaser">
                     <span id="akt-dom">Wähle Deine Vertretung<br></span>
-                    <span id="akt-sub">Wahltage sind 12. und 13. Juni<br>
+                    <span id="akt-sub">Wahltage sind 9. und 10. Juni<br>
                     Alle Fakultäten und zentrale Vertretung</span>
                 </div>
             </div>
         </div> <!-- row -->
-        <div class="row">
+	<!--        
+	<div class="row">
             <div class="span12" id="vorbei">
                 <h2>Wahlergebnisse</h2>
                 <p>Die Hochschulwahlen sind vorbei, erste Wahlergebnisse können eingesehen werden</p>
                 <a href="ergebnisse.html">Zu den Wahlergebnissen</a>
             </div>
         </div>
+	-->
         <div class="row">
             <div class="span12" id="warum">
                 <h2>Warum wählen gehen?</h2>
@@ -92,8 +94,8 @@
         <div class="row">
             <div class="span6" id="wann">
                 <h2>Wann wird gewählt?</h2>
-                <p> Die Hochschulwahlen finden am <strong>12. und 13. Juni</strong> statt; die
-                Wahllokale sind jeweils von <strong>09:00 bis 15:00</strong> geöffnet.</p>
+                <p> Die Hochschulwahlen finden am <strong>9. und 10. Juni</strong> statt; die
+                Wahllokale sind Dienstag von <strong>09:00 bis 16:30</strong> und Mittwoch von <strong>09:00 bis 15:00 Uhr</strong> geöffnet.</p>
                 <p>Die eigentliche Wahl dauert nicht besonders lang, alle Studierenden
                 sollten eine passende Gelegenheit finden können, ihre Kreuzchen
                 zu machen.  Wo genau gewählt werden kann, hängt von der
@@ -182,7 +184,7 @@
         <div class="row" id="impressum">
             <div class="span4">
                 <h2>Impressum</h2>
-                <p>Ein Webangebot des <a href="http://www.asta.uni-augsburg.de/asta/">Öffentlichkeitsreferats</a> im allgemeinen Studierendenausschuss.</p>
+                <p>Ein Webangebot des <a href="http://universum.pink">UNIVERSUM - Magazin für Hochschulpolitik und andere Sachen, </a> herausgegeben vom <a href="http://asta.uni-Augsburg.de">AStA (Studierendenvertretung).</p>
                 <p>Für die Vorstellung der Hochschulgruppen sind einzig die
                 Hochschulgruppen selbst verantwortlich.</p>
             </div>
@@ -197,9 +199,8 @@
                 <h2>Liste der Quellen</h2>
                 <ul>
                     <li>Liste der Wahlvorschläge in Gebäude A</li>
-                    <li><a href="http://www.asta.uni-augsburg.de/de/multimedia/herunterladen/Wahllokale_2012.pdf">
-                        Liste der Wahllokale
-                        </a>
+                    <li>Liste der Wahllokale
+                        
                     </li>
                     <li>Anfragen an die jeweiligen Hochschulgruppen</li>
                 </ul>
