--- a/kandidaten.html
+++ b/kandidaten.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
-    <title>Kandidaten zur Hochschulwahl 2012 - AStA Augsburg</title>
+    <title>Kandidaten zur Hochschulwahl 2015 - AStA Augsburg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Florian Heinle">
@@ -51,7 +51,7 @@
                 <img src="img/asta.png" alt="AStA-Logo" title="Allgemeiner Studierendenausschuss Augsburg">
             </div>
             <div class="span6">
-                <h1>Hochschulwahlen 2012</h1>
+                <h1>Hochschulwahlen 2015</h1>
             </div>
             <div class="span2">
                 <a href="#impressum">Impressum</a>
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="span6">
                 <p>Hier möchten wir Dir die Listen vorstellen, die bei der Wahl
-                zum studentischen Konvent in der Amtszeit 2012/2013 kandidieren.</p>
+                zum studentischen Konvent in der Amtszeit 2015/2016 kandidieren.</p>
                 <p>Jede Hochschulgruppe hat hier eine kurze Zusammenfassung ihrer
                 Vorstellung sowie ihres Wahlprogramms. Außerdem findest Du hier
                 weiterführende Links zu den jeweiligen Auftritten der Gruppen
@@ -79,11 +79,12 @@
             </div>
             <div class="span6">
                 <h2>Podiumsdiskussion</h2>
-                <p>Montag, 11. Juni, 13:30<br>
-                Raum 2001 Jura (Gebäude H)</p>
+                <p>Montag, 8. Juni, 11:45<br>
+                Gebäude H (Jura), Raum 1001</p>
                 <p>Die Parteien stellen sich vor und beantworten Deine Fragen.<br>
                 Veranstaltet vom Allgemeinen Studierendenausschuss.
                 </p>
+		Zum <a href="https://www.facebook.com/events/1438802426424177/">Facebook-Event</a>
             </div>
         </div>  
         <hr>
@@ -93,77 +94,13 @@
                 <p>Hier erhältst Du einen Überblick über die zur Wahl antretenden
                 Listen. Klicke einfach auf einen Namen, um mehr zu erfahren.</p>
                 <ul class="nav nav-tabs" id="hsgs">
-                    <li><a data-toggle="tab" href="#fsl">FSL</a></li>
                     <li><a data-toggle="tab" href="#jusos">JuSo HSG</a></li>
-                    <li><a data-toggle="tab" href="#kllafsl">Kritische Liste/Lehramtsliste/FSL</a></li>
-                    <li><a data-toggle="tab" href="#lust">LuSt</a></li>
+                    <li><a data-toggle="tab" href="#kllafsl">Kritische Liste/Lehramtsliste/FSL</a></li>                
                     <li><a data-toggle="tab" href="#lhg">LHG</a></li>
                     <li><a data-toggle="tab" href="#rcds">RCDS</a></li>
                 </ul>
                 <div class="tab-content">
-                    <div class="tab-pane" id="fsl">
-                        <h3>Fachschaftsliste Germanistik</h3>
-                        <p>Aus der Notwendigkeit geboren den Studierenden der
-                        Germanistik und des Deutschen eine erste, eine neue
-                        fachspezifische Anlaufstelle für ihren Studiengang zu
-                        bieten wurde im Wintersemester 2011/12 durch die
-                        Universität und ihre studentischen Gremien die Gründung
-                        einer neuen Fachschaft angestoßen. In dieser
-                        organisierten sich bereits im ersten Semester zahlreiche
-                         Studierenden die ihrerseits erkannten das zur
-                        Verbesserung der Lehre auch das Engagement der
-                        studentischen Selbstverwaltung gehört, in welcher von 
-                        Studenten für Studenten Arbeit geleistet wird.</p>
-
-                        <p>Angetrieben vom Wunsch eine gemeinsame Basis und
-                        Interessenvertretung für den Studiengang BA Germanistik
-                        und LA Deutsch zu bieten gründete sich so im WS 11/12
-                        die neue Fachschaft Germanistik welche einerseits für
-                        die Vertretung ihrer Kommilitonen als auch die
-                        interdisziplinäre Kooperation an der Universität
-                        Augsburg einzustehen versucht und im Rahmen dessen neben
-                        der Vertretung der Studierenden in ihrer Funktion sich
-                        auch hochschulpolitisch zu platzieren gedenkt. Insofern
-                        wird jedoch keine primäre politische Partizipation für
-                        den Fachbereich alleine angestrebt sondern vielmehr der
-                        Gedanke gepflegt unabhängig dessen, im Geiste der
-                        Kooperation, gemeinsam für die Interessen der
-                        Studierenden zu handeln.</p>
-                        <h3>Wahlprogramm</h3>
-                        <ul>
-                            <li>verantwortungsvoller und konstruktiver Diskurs
-                            zwischen allen Beteiligten der Fakultät und
-                            Universität</li>
-                            <li>Dialog-Konzept und effektive Bewältigung von
-                            Problemen an der Universität</li>
-                            <li>Gleichberechtigung der Fakultäten und Lehrstühle
-                            mit studentischer Mitbestimmung</li>
-                            <li>Abbau des Verschulungsgrades im modularisierten
-                            Studium – für mehr thematische Wahlmöglichkeiten und
-                            Eigenständigkeit; ausreichend Kurse und Dozenten</li>
-                            <li>Abschaffung der Studiengebühren sowie gleiche
-                            finanzielle Ausstattung der Fakultäten</li>
-                            <li>freier Masterzugang für alle in allen
-                            Fachrichtungen</li>
-                            <li>Ausweitung interdisziplinärer Lehre und
-                            Forschung</li>
-                            <li>Stärkung der kulturellen Aktivitäten von
-                            Studierenden und ein intensiver interkultureller
-                            Austausch</li>
-                        </ul>
-
-                        <h3>Weiterführende Links</h3>
-                        <ul>
-                            <li>
-                            <a href="http://www.facebook.com/pages/Fachschaft-Germanistik-Augsburg/144536408986479">
-                                Facebook
-                            </a>
-                            </li>
-                            <li>
-                                <a href="mailto:fsgermanistik.augsburg@googlemail.com">Kontakt</a>
-                            </li>
-                    </div>
-                    <div class="tab-pane" id="jusos">
+                        <div class="tab-pane" id="jusos">
                         <h2>Juso-Hochschulgruppe</h2>
                         <p>Wir sind ein offener Zusammenschluss politisch
                         interessierter Studierender mit Vorliebe zur sozialen
@@ -266,71 +203,7 @@
                         </ul>
                     </div>
 
-                    <div class="tab-pane" id="lust">
-                        <h2>LUSt!! - Liste unabhängiger Studierender</h2>
-                        <p>Die Liste unabhängiger Studierender!!
-                        (LUSt!!) ist ein überfakultärer Zusammenschluss von Studierenden,
-                        die sich gemeinsam für dieInteressen und Anliegen aller Studierenden
-                        einsetzt. Wir bauen dabei auf die Erfahrung, die wir in zahlreichen
-                        universitären und fakultären Gremien und bei der Fachschaftsarbeit
-                        in den letzten Jahren gesammelt haben.</p>
-                        <p>Unsere Liste vereint Studierende mit
-                        unterschiedlichen Auffassungen. Somit können wir die
-                        einzelnen Problemstellungen differenziert diskutieren
-                        und die optimale Lösung für uns an der Universität
-                        Augsburg anstreben. Wir sind unabhängig, weil wir nicht
-                        an parteipolitische Vorgaben oder Weisungen von
-                        übergeordneten Landesverbänden gebunden sind.</p>
-                        <h3>Wahlprogramm</h3>
-                        <p>Was wollen wir?  Wir wollen die Situation hier an
-                        unserer Universität Augsburg direkt und zeitnah
-                        verbessern – ohne parteipolitische oder sonstige
-                        Weisungen und Abhängigkeiten!</p>
-
-                        <p>Für mehr Mitbestimmung!!  Wir wollen die studentische Mitbestimmung an der
-                        Universität Augsburg steigern. Hierbei wollen wir uns vor allem auf die
-                        geplante Gesetzesänderung des Hochschulgesetzes, sowie die tatsächliche
-                        Mitbestimmung in den einzelnen Gremien fokussieren, um die bereits erreichten
-                        Erfolge weiter auszubauen. Auch den Kampf gegen die Intransparenz werden wir
-                        mit Eurer Unterstützung fortführen, denn das Ziel der transparenten Universität
-                        Augsburg ist erreichbar.</p>
-
-                        <p>Gegen Studiengebühren!!  Wir fordern die Abschaffung der Studienbeiträge und
-                        eine anschließende volle staatliche Finanzierung der aus Studiengebühren
-                        geschaffenen Verbesserungen! Bis zur endgültigen Abschaffung setzen wir uns für
-                        eine Senkung der Studienbeiträge und eine sinnvolle Verwendung des Geldes ein!</p>
-
-                        <p>Für die fortlaufende Optimierung der Studiengänge!!  Die Bachelor- und
-                        Masterstudiengänge weisen noch bedenkliche Lücken in der Ausgestaltung auf.
-                        Darum setzen wir uns für eine vergleichbare Vergabe von ECTS-Punkten, eine
-                        gerechte Anrechenbarkeit von außerhalb erbrachten Leistungen, sinnvolle
-                        Zulassungsverfahren zu Seminaren sowie einen fairen Masterzugang für alle ein. 
-                        Außerdem sind wir für eine verbesserte Verpflegung auf dem Campus mit längeren
-                        Öffnungszeiten, größerem Angebot und studierendenfreundlicher Preisgestaltung
-                        in Mensa und Cafeterien, sowie für die Stärkung der studentischen Kultur und
-                        eine umweltbewusste Universität Augsburg.</p>
-
-                        <p>Für einen ausgewogenen Diskurs zur Zivilklausel!!  Die Thematik einer
-                        Zivilklausel für die Universität Augsburg wurde bereits heiß diskutiert und
-                        wird noch weiter an Bedeutung gewinnen.  Wir sehen es als unsere Aufgabe, die
-                        Studierenden über die Vor- und Nachteile einer Zivilklausel zu informieren,
-                        damit eine optimale Lösung für die Universität und ihre Studierenden gefunden
-                        werden kann.</p>
-                        <h3>Weiterführende Links</h3>
-                        <ul>
-                            <li>
-                                <a href="https://dl.dropbox.com/u/10411074/Wahlprogamm_LUSt%21%21.pdf">
-                                    Ausführliches Wahlprogramm (PDF)
-                                </a>
-                            </li>
-                            <li><a href="https://www.facebook.com/LUStAugsburg">Facebook-Auftritt</a></li>
-                            <li>
-                                <a href="https://fbcdn-sphotos-a.akamaihd.net/hphotos-ak-snc6/252668_393002847417208_193183720732456_1105247_117835396_n.jpg">
-                                    Vorstellung der Kandidaten (JPG)
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                  
                     <div class="tab-pane" id="lhg">
                         <h2>Liberale Hochschulgruppe</h2>
                         <p>Als Liberale Hochschulgruppe (LHG) gilt unsere oberste Verpflichtung
@@ -405,7 +278,7 @@
                         <h3>Weiterführende Links</h3>
                         <ul>
                             <li>
-                                <a href="http://www.rcds-augsburg.de/downloads/wahlprogramme/Wahlprogramm%202012.pdf">
+                                <a href="http://www.rcds-augsburg.de/downloads/wahlprogramme/Wahlprogramm%202015.pdf">
                                     ausführliches Wahlprogramm (PDF)
                                 </a>
                             </li>
@@ -447,7 +320,7 @@
                 <h2>Liste der Quellen</h2>
                 <ul>
                     <li>Liste der Wahlvorschläge in Gebäude A</li>
-                    <li><a href="http://www.asta.uni-augsburg.de/de/multimedia/herunterladen/Wahllokale_2012.pdf">
+                    <li><a href="http://www.asta.uni-augsburg.de/de/multimedia/herunterladen/Wahllokale_2015.pdf">
                         Liste der Wahllokale
                         </a>
                     </li>
