--- a/kandidaten.html
+++ b/kandidaten.html
@@ -26,20 +26,7 @@
                     <ul class="nav">
                         <li><a href="index.html">Wann, Wo, Was und wie</a></li>
                         <li><a href="kandidaten.html">Welche Kandidaten?</a></li>
-                        <li class="dropdown">
-                            <a
-                                href="ergebnisse.html"
-                                class="dropdown-toggle"
-                                data-toggle="dropdown">
-                                    Wahlergebnisse
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="ergebnisse.html">Einleitung</a></li>
-                                <li><a href="ergebnisse.html#eule_e">EULe</a></li>
-                                <li><a href="ergebnisse.html#konvent_e">Konvent</a></li>
-                                <li><a href="ergebnisse.html#fak_e">Fakultäten</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="wahl-o-mat">Zum Wahl-O-Mat</a></li>                       
                     </ul>
                 </div> <!-- nav-collapse -->
             </div> <!-- container -->
