--- a/index.html
+++ b/index.html
@@ -91,20 +91,29 @@
             </div>
             <div class="span6" id="wo">
                 <h2>Wo wird gewählt?</h2>
-                <ul>
-                    <li><strong>Katholisch-Theologische Fakultät</strong><br>
-                    Gebäude D, Ebene 4, vor Raum 4143</li>
-                    <li><strong>Wirtschaftswissenschaftliche Fakultät</strong><br>
-                    Fakultätsgebäude Wiwi-Fakultät, Eingangshalle (Osteingang)</li>
-                    <li><strong>Juristische Fakultät</strong><br>
-                    Gebäude H (Neubau), Raum 1015</li>
-                    <li><strong>Fakultäten Phil-Soz und Phil-Hist</strong><br>
-                    Gebäude D, Ebene 2, Raum 2101</li>
-                    <li><strong>Mathematisch-Naturwissenschaftliche Fakultät</strong><br>
-                    Gebäude T (Physik-Gebäude Nord), Raum 1005</li>
-                    <li><strong>Fakultät für angewandte Informatik</strong><br>
-                    Gebäude N, Raum 1056</li>
-                </ul>
+                
+<p><b>Katholisch-Theologische Fakultät</b><br>
+Gebäude D, Raum Nr. 4144</p>
+
+<p><b>Wirtschaftswissenschaftliche Fakultät</b><br>
+Gebäude J, Raum Nr. 1512</p>
+
+<p><b>Juristische Fakultät<br>
+</b>
+Gebäude H, Raum Nr. 1015</p>
+
+<p><b>PhilSoz- Fakultät und PhilHist- Fakultät<br>
+</b>
+Gebäude D 1, Raum Nr. 2101</p>
+
+<p><b>Mathematisch-Naturwissenschaftliche Fakultät<br>
+</b>
+Gebäude T, Raum Nr. 1005</p>
+
+<p><b>Fakultät für Angewandte Informatik<br>
+</b>
+Gebäude N, Raum Nr. 1055.<br></p>
+             
             </div>
         </div><!-- row -->
         <hr>
