--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
-    <title>Hochschulwahlen 2015 - AStA Augsburg</title>
+    <title>Hochschulwahlen 2016 - Universität Augsburg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Florian Heinle">
@@ -25,7 +25,6 @@
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li><a href="index.html">Wann, Wo, Was und wie</a></li>
-                        <li><a href="kandidaten.html">Welche Kandidaten?</a></li>
                         <li><a href="wahl-o-mat">Zum Wahl-O-Mat</a></li>
                     </ul>
                 </div> <!-- nav-collapse -->
@@ -38,7 +37,7 @@
                 <img src="img/asta.png" alt="AStA-Logo" title="Allgemeiner Studierendenausschuss Augsburg">
             </div>
             <div class="span6">
-                <h1>Hochschulwahlen 2015</h1>
+                <h1>Hochschulwahlen 2016</h1>
             </div>
             <div class="span2">
                 <a href="#impressum">Impressum</a>
@@ -48,7 +47,7 @@
             <div class="span12" id="ankreuzen">
                 <div id="ankreuzen-teaser">
                     <span id="akt-dom">Wähle Deine Vertretung<br></span>
-                    <span id="akt-sub">Wahltage sind 9. und 10. Juni<br>
+                    <span id="akt-sub">Wahltage sind 7. und 8. Juni<br>
                     Alle Fakultäten und zentrale Vertretung</span>
                 </div>
             </div>
@@ -81,7 +80,7 @@
         <div class="row">
             <div class="span6" id="wann">
                 <h2>Wann wird gewählt?</h2>
-                <p> Die Hochschulwahlen finden am <strong>9. und 10. Juni</strong> statt; die
+                <p> Die Hochschulwahlen finden am <strong>7. und 8. Juni</strong> statt; die
                 Wahllokale sind Dienstag von <strong>09:00 bis 16:30</strong> und Mittwoch von <strong>09:00 bis 15:00 Uhr</strong> geöffnet.</p>
                 <p>Die eigentliche Wahl dauert nicht besonders lang, alle Studierenden
                 sollten eine passende Gelegenheit finden können, ihre Kreuzchen
@@ -123,20 +122,18 @@ Gebäude N, Raum Nr. 1055.<br></p>
                 <p>Man bekommt drei Wahlzettel - für die
                 <acronym style="font-style:italic;" title="Erweiterte Universitätsleitung">EULe</acronym>,
                 für den <em>Fakultätsrat</em> und für den <em>studentischen Konvent</em>.</p>
-                <p>In der EULe sitzt ein studentischer Vertreter und wird an
-                den Entscheidungen dort beteiligt. Er wird direkt gewählt.</p>
-                <p>Im Fakultätsrat sitzen zwei studentische Vertreter.  Sie
+                <p>In der EULe sitzen zwei studentische Vertreter*innen und werden an
+                den Entscheidungen dort beteiligt. Sie werden direkt gewählt.</p>
+                <p>Im Fakultätsrat sitzen zwei studentische Vertreter*innen.  Sie
                 entscheiden dort mit und sind, zusammen mit den Dekanen und
                 Studiendekanen, Mitglieder der Studienbeitragskommission der
                 jeweiligen Fakultät. Je nach Fakultät entfallen mehrere weitere
                 Sitze auf den StuRa, der Studierendenvertretung auf
                 Fakultätsebene. </p>
                 <p>Die gerade genannten studentischen
-                Vertreter aus dem Fakultätsrat bilden zusammen mit vierzehn
-                direkt gewählten Vertretern den studentischen Konvent. Dieser
-                wählt unter anderem den studentischen Sprecherrat, der auf
-                gesamtuniversitärer Ebene in der Studienbeitragskommission
-                sitzt und den AStA, das ausführende Organ der
+                Vertreter*innen aus dem Fakultätsrat bilden zusammen mit vierzehn
+                direkt gewählten Vertreter*innen den studentischen Konvent. Dieser
+                wählt unter anderem den AStA, das ausführende Organ der
                 Studierendenvertretung auf fakultätsübergreifender Ebene.</p>
             </div>
 
@@ -149,8 +146,8 @@ Gebäude N, Raum Nr. 1055.<br></p>
                 sichergestellt.</p>
                 <p>In der Wahlkabine kannst Du pro Wahlzettel unterschiedlich
                 viel Kreuze machen:</p>
-                <ul><li><strong>EULe</strong>: Hier hast Du <em>eine einzige</em>
-                Stimme. Du kannst sie entweder einem Wahlvorschlag (und damit
+                <ul><li><strong>EULe</strong>: Hier hast Du <em>zwei</em>
+                Stimmen. Du kannst sie entweder einem Wahlvorschlag (und damit
                 der ersten Person dort) oder direkt einer Person geben.</li>
                 <li><strong>Fakultätsrat</strong>: Hier hast Du <em>zwei Stimmen</em>.
                 Du kannst sie entweder, mit nur einem Kreuz einem Wahlvorschlag
@@ -180,7 +177,7 @@ Gebäude N, Raum Nr. 1055.<br></p>
         <div class="row" id="impressum">
             <div class="span4">
                 <h2>Impressum</h2>
-                <p>Ein Webangebot des <a href="http://universum.pink">UNIVERSUM - Magazin für Hochschulpolitik und andere Sachen, </a> herausgegeben vom <a href="http://asta.uni-Augsburg.de">AStA (Studierendenvertretung).</p>
+                <p>Ein Webangebot des <a href="http://asta.uni-Augsburg.de">AStA der Uni Augsburg</a>.</p>
                 <p>Für die Vorstellung der Hochschulgruppen sind einzig die
                 Hochschulgruppen selbst verantwortlich.</p>
             </div>
